<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/declaration"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/join_in_et_manifesto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/participant_photos"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/participant_video"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/participant_music"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn01"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/listview_selector"
                android:contentDescription="@null" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_pk_01"
                android:contentDescription="@null" />
        </RelativeLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/btn02"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/listview_selector"
                android:contentDescription="@null" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="15dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_pk_02"
                android:contentDescription="@null" />
        </RelativeLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/btn03"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/listview_selector"
                android:contentDescription="@null" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="15dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_pk_03"
                android:contentDescription="@null" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/detail_submit_sign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_btn_selector"
        android:gravity="center"
        android:onClick="controlClick"
        android:text="@string/join_in"
        android:textColor="@drawable/text_color_selector"
        android:textSize="20sp" />

</LinearLayout>